<resources>
    <string name="app_name">CustomerManagment</string>
    <string name="organization_details">Organization Details</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="type_of_organisation">Type of Organisation</string>
    <string name="no_of_employees">No of Employees</string>
    <string name="_1_20">1-20</string>
    <string name="_51_200">51-200</string>
    <string name="_21_50">21-50</string>
    <string name="_201_above">201-above</string>
    <string name="comment">Comment</string>
    <string name="avoilable_on_online_media">Avoilable on online media</string>
    <string name="facebook">facebook</string>
    <string name="website">website</string>
    <string name="website_url">website url</string>
    <string name="next">Next</string>
    <string name="jast_dail">jast dail</string>
    <string name="person_details">Person Details</string>
    <string name="designation">Designation</string>
    <string name="mobile_no">Mobile No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="seller">Seller</string>
    <string name="feachers">Feachers</string>
    <string name="improvements">Improvements</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="product_information">Product Information</string>
    <string name="expanse_type">Expanse type</string>
    <string name="recurring_expanses">Recurring Expanses</string>
    <string name="installment_cost">Installment Cost</string>
    <string name="comments">Comments</string>
    <string name="intrest_information">Intrest Information</string>
    <string name="expense">Expense</string>
    <string name="cost">Cost</string>
    <string name="pay_type">Pay Type</string>
    <string name="Comment" />
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="title_activity_cmlist">CMListActivity</string>
    <string name="view_contact">View Contact</string>
    <string name="view_product">View Product</string>
    <string name="just_dial">Just_dial</string>
    <string name="features">features</string>
    <string name="expense_type">expense_type</string>
    <string name="Phone_No_is_not_valid">Phone No is not valid</string>
    <string name="Comment_is_empty">Comment is empty</string>
    <string name="Name_is_empty">Name is empty</string>
    <string name="Address_is_empty">Address is empty</string>
    <string name="Type_is_empty">Type is empty</string>
    <string name="Email_is_not_valid">Email is not valid</string>
    <string name="install">Install</string>
    <string name="reccuring">Reccuring</string>
    <string name="type">Type</string>
    <string name="Designation_is_empty">Designation is empty</string>
    <string name="YES">Yes</string>
    <string name="seller_is_empty">seller is empty</string>
    <string name="Feachers_is_empty">Feachers is empty</string>
    <string name="Recurringexpanse_is_empty">Recurringexpanse is empty</string>
    <string name="Successfull">Successfull</string>
</resources>
