<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dirgha03.customermanagment.CMPersonDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ff6666"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/person_details"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="20dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etName"
                    style="@style/etStyle"
                    android:layout_marginTop="30dp"
                    android:textColorHint="#ffff"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/etDesignation"
                    style="@style/etStyle"
                    android:layout_marginTop="10dp"
                    android:textColorHint="#ffff"
                    android:hint="@string/designation" />

                <EditText
                    android:id="@+id/etMobile"
                    style="@style/etStyle"
                    android:layout_marginTop="10dp"
                    android:textColorHint="#ffff"
                    android:hint="@string/mobile_no" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/Gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="45dp">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/etStyle"
                    android:layout_marginTop="10dp"
                    android:textColorHint="#ffff"
                    android:hint="@string/email" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center"

                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btnNext"
                        style="@style/btnStyle"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:onClick="next"
                        android:text="@string/next" />

                    <Button
                        android:id="@+id/btnSkip"
                        style="@style/btnStyle"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:onClick="Skip"
                        android:text="@string/skip" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
